--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,5 +8,13 @@
 </head>
 <body>
     <h2>Landing Page Template</h2>
+    <div class="opciones"></div>
+    <div class="contenido">
+            <a href="home"></a>
+            <a href="services"></a>
+    </div>
+
+
+
 </body>
 </html>
