--- a/guia/index.html
+++ b/guia/index.html
@@ -1,51 +1,42 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Landing Page Template</title>
+  <link rel="stylesheet" href="estyles.css">
 </head>
 <body>
   <h2>Landing Page Template</h2>
-<div class="padre">
-  <div class="opciones">
-    <img src="oo_house.png" class="primera">
-    <img src="twiter.png" >
-    <img src="facebook.png" >
-    <img src="instagram.png" >
-    <img src="Youtube-fill.png" >
-  </div>
-  <div class="contenido">
-    <div class="barra">
+  <div class="padre">
+    <div class="opciones">
+      <img src="oo_house.png" class="primera" />
+      <img src="twiter.png" />
+      <img src="facebook.png" />
+      <img src="instagram.png" />
+      <img src="Youtube-fill.png" />
+    </div>
+
+    <div class="contenido">
+      <div class="barra">
         <p>home</p>
         <p>Services</p>
         <p>About Us</p>
         <p>Appointment</p>
         <p>Contact</p>
-        <div><img src="Call.png" alt=""></div>
-        <p 
-        class="verde">(+605)1234-56789
-        </p>
+        <div><img src="Call.png" alt="" /></div>
+        <p class="verde">(+605)1234-56789</p>
+      </div>
 
-    </div>
-
-    <div class="box">
-        <img src="Odontologa.webp" class="fondo">
+      <div class="box">
+        <img src="Odontologa.webp" class="fondo" />
         <div class="conten">
-            <h1>Full Dedicate <br> To Your</h1>
-            <h1>Dental Health</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nihil quod, debitis dolores sed repellendus unde ex excepturi iure hic.</p>
-            <button class="boton1">
-                <p>Book now</p>
-                <img src="play (1).png" alt="">
-            </button>
-            <button class="boton2">
-                <p>Read more</p>
-                <img src="dos.png" alt="">
-            </button>
-        </div>
-    </div>
+          <h1>Full Dedicate <br />To Your</h1>
+          <h1>Dental Health</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+          <button class="boton1">
+            <p>Book now</p>
+
     <div class="formulario">
       <h1>Book an Appointment</h1>
 
@@ -89,7 +80,5 @@
             Appointment time*
           </div>
         </div>
-    </div>
-</div>
-</body>
-</html>
+      </div>
+  </div>
