--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
 
     <div class="box">
         <img src="Odontologa.webp" class="fondo">
+        <div class="opacidad"></div>
         <div class="conten">
             <h1>Full Dedicate <br> To Your</h1>
-            <h1>Dental Health</h1>
+            <h1 class="unico">Dental Health</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nihil quod, debitis dolores sed repellendus unde ex excepturi iure hic.</p>
             <button class="boton1">
                 <p>Book now</p>
@@ -61,14 +62,14 @@
       </div>
 
       <div class="row">
-        <div class="col largo">
+        <div class="collargo">
           <p class="titulo">Your Email Address:</p>
           <div class="entrada">Your email address*</div>
         </div>
       </div>
 
       <div class="row">
-        <div class="col largo">
+        <div class="collargo">
           <p class="titulo">Contact No:</p>
           <div class="entrada">Your contact no*</div>
         </div>
@@ -77,18 +78,22 @@
       <div class="row">
         <div class="col">
           <p class="titulo">Date</p>
-          <div class="entrada icono">
+          <div class="entrada_icono">
             <img src="calender.png" alt="calendario">
             Appointment date*
           </div>
         </div>
         <div class="col">
           <p class="titulo">Time</p>
-          <div class="entrada icono">
+          <div class="entrada_icono">
             <img src="clock.png" alt="reloj">
             Appointment time*
           </div>
         </div>
+          <button class="boton3">
+                <p>Book now</p>
+                <img src="play (1).png" alt="">
+            </button>
     </div>
 </div>
 </body>
